# eigenvector-centrality

./: .gitignore  CMakeLists.txt  README.md
eigenvector-centrality/: CMakeLists.txt  requirements.txt
eigenvector-centrality/report/figures/: accuracy_table.csv  runtime_table.csv
eigenvector-centrality/results/tables/: runtime_table.csv
eigenvector-centrality/scripts/: generate_tables.py  plot.py  run_experiments.sh
eigenvector-centrality/src/: eigenvector_centrality.cpp  graph.cpp  main.cpp
include/: eigenvector_centrality.hpp  graph.hpp
molecular-graphs/src/: algorithms.py  analysis.py  main.py
python/: README.md  requirements.txt
python/data/: analysis_results.json  benchmark_results.csv
python/report/: project_report.tex
python/src/: molecular_graphs.py
report/figures/: runtime_table.csv
scripts/: generate_graphs.py  pipeline.sh  plot.py  run_experiments.sh
src/: eigenvector_centrality.cpp  graph.cpp  main.cpp
